Step_5/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
    annotations:
      nginx.ingress.kubernetes.io/use-regex: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    rules:
    - host: k8sapp.info
      http:
        paths:
        - path: /api(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: api-svc
              port:
                number: 8090
        - path: /web
          pathType: Prefix
          backend:
            service:
              name: web-svc
              port:
                number: 8080
    ingressClassName: nginx
